December 5 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Corrected a major bug in the score system
	* Attacking civilians doesn't raise relations to evil gods anymore, but
	  killing does
	* Full helmets are now used by several monsters formely wearing a normal helmet

December 4 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Added parasitized state which increases food consumption, can be activated
	  by eating spoiled flesh and cured by healing liquid, antidote and sometimes
	  by vomiting
	* Decreased poison's effect more
	* Numerous devirtualizations
	* Equipment screen now warns about low strength more often
	* Added horn of bravery and horn of fear items
	* Added vodka material
	* Vodka and Valdemar are now explosive
	* The mistress pain message Hex added (but did not mention) is now occasionally
	  printed if she is hit by the enner beast's scream
	* Corrected a fatal bug in the chameleon polymorph code
	* Broken helmet pictures added to item.pcx by Kahvi added modified by me
	* Ring picture in item.pcx remade by Kahvi
	* Added full helmet
	* Helmets can now break
	* Added troll blood material which acts like weakened healing liquid
	* Cruentus's pray effect is now better
	* Shields' BCs have been decreased a bit
	* Removed the smaller temples of Attnam
	* Valpurus's pray effect is now a little less superior
	* Show battle info is henceforth a WMode command

December 03 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* chests can now by unlocked from same square with key
	* anvil added to smithy
	* digging produces stones
	
December 01 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* "Chest's lock shatters to pieces" -> "The Chest's..."

December 3 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* There's some light in Attnam again
	* Puppies now have 50% more HP
	* Tried to optimize script instantiations without noteworthy success
	* Corrected a bug that prevented NPCs from searching unseen enemies