@@ -170,4 +170,7 @@ Bear traps should break eventually.
 //More color states to silhouette.
 Digging walls should yield stones.
 Abort messages should tell the user to e-mail ivan-users@sourceforge.net. Remember to tell the user to state their version number/OS etc.
-?Zombie flesh should already be spoiled when a zombie dies.
+?Zombie flesh should already be spoiled when a zombie dies
+wait for keypress when player gets stuck in a bear trap
+
+
